src/App.css
@import url('../node_modules/@fortawesome/fontawesome-free/css/all.css');

.App {
  text-align: center;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main {
  flex: 1;
  margin: 0% 20%;
}

h1 {
  font-family: 'Courier New', Courier, monospace;
  font-size: 3vw;
}

h3, p {
  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

/* Repos */

.repos-container {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 33% 34% 33%;
  padding: 40px 0px;
}

@media only screen and (max-width: 768px) {
  .repos-container {
    grid-template-columns: 47.5% 47.5%;
    grid-column-gap: 5%;
    grid-row-gap: 40px;
  }
}

@media only screen and (max-width: 375px) {
  .repos-container {
    grid-template-columns: 100%;
    grid-column-gap: 5%;
  }
}

.repo {
  padding: 10px;;
}

.card-body {
  height: 100%;
  border: solid;
  border-color: grey;
  border-radius: 5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
}

.card-title {
  font-size: 1.5vw;
}

.card-link {
  right: 33%;
  text-decoration: none;
  color: #282c34;
}

.card-body:hover {
  background-color:#191206;
  color: white;
}

.favourites p {
  bottom: 0;
}
/* User */

.user-picture-container {
  padding: 50px 0px;
}

.user-picture {
  border-radius: 50%;
  max-width: 25%;
}

.user-link {
  text-decoration: none;
  color: #191206;
  font-weight: bold;
  font-size: larger;
}

.languages-picture {
  max-width: 100%;
}

.filter-repo {
  padding-top: 40px;
}

/* Navbar */

.navbar {
  display: flex;
  line-height: 1.5;
  color: white;
  background-color: #191206;
  justify-content: space-evenly;
  align-items: center;
}

.search-form {
  padding: 10px;;
}

.search-button {
  color: white;
  background-color: #191206;
}

.search-button:hover {
  color:#000000;
  background-color:#FFFFFF;
}

/* Footer  */

.footer {
  bottom: 0;
  background: #191206;
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 100px;
  padding: 0px 50px;
  color: white;
}
.footer-links {
  display: flex;
  align-items: center;
}
.footer-links a {
  color: white;
  opacity: 0.15;
  text-decoration: none;
  font-size: 24px;
  padding: 0px 10px;
}
.footer-links a:hover {
  opacity: 1;
}
.footer .fa-heart {
  color: #D23333;
}

